Fix BS5 visual regressions: navbar, spacing, back link, wordcloud, date badge

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -271,9 +271,6 @@ span.bi-link {
   }
 }
 
-/* Ensure spacing under navbar */
-header { margin-bottom: 90px; }
-
 /* World cloud */
 .word-cloud {
   width: 100%;
